--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-torch==2.0.1
+torch>=2.0.0
+transformers>=4.30.0
+tokenizers>=0.13.0
+numpy>=1.21.0,<2.0
+regex>=2022.3.15
+tqdm>=4.64.0
+datasets>=2.10.0
+accelerate>=0.20.0
+wandb>=0.15.0
+tensorboard>=2.13.0
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+jupyter>=1.0.0
+ipykernel>=6.23.0
 torchtext==0.15.2
 torchdata==0.6.1
 portalocker>=2.0.0
-numpy<2.0
-datasets
-matplotlib>=3.5.0
