--- a/xinSLM_v05_distillation/configs/model_config.yaml
+++ b/xinSLM_v05_distillation/configs/model_config.yaml
@@ -3,7 +3,7 @@
 
 model:
   # Core architecture parameters
-  vocab_size: 32000
+  vocab_size: 50257  # Match DialoGPT vocabulary
   hidden_size: 1024
   intermediate_size: 2752  # ~2.7x hidden_size for SwiGLU
   num_hidden_layers: 24
