Fix v08 packed text dataset restart

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 xinSLM_v02_train_gpt_language_model/.venv/
 xinSLM_v03_slm_llama_architecture/.venv/
 xinSLM_v03_slm_llama_architecture/test_model/
+xinSLM-v08-nanoChat/.venv/
+xinSLM-v08-nanoChat/checkpoints/
